--- a/profile.html
+++ b/profile.html
@@ -2156,37 +2156,17 @@ background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAkAAAAJCAYAAADgkQ
 
 
 
-function onMediaSuccess(stream) {
-    const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
-  
-    // Crear un filtro de paso bajo
-    const lowpassFilter = audioCtx.createBiquadFilter();
-    lowpassFilter.type = "lowpass"; // Filtro de paso bajo
-    lowpassFilter.frequency.setValueAtTime(1000, audioCtx.currentTime); // Frecuencia de corte: 1000Hz
-  
-    // Crear la fuente de audio desde el stream del micrófono
-    const source = audioCtx.createMediaStreamSource(stream);
-  
-    // Conectar la fuente al filtro
-    source.connect(lowpassFilter);
-  
-    // Crear un destino para conectar el filtro
-    const destination = audioCtx.createMediaStreamDestination();
-    lowpassFilter.connect(destination);
-
-    // Crear el MediaStreamRecorder a partir del audio filtrado
-    mediaRecorder = new MediaStreamRecorder(destination.stream);
-    mediaRecorder.stream = destination.stream; // Usamos el stream filtrado
+  function onMediaSuccess(stream) {
+    mediaRecorder = new MediaStreamRecorder(stream);
+    mediaRecorder.stream = stream;
     mediaRecorder.mimeType = 'audio/wav';  
+    //mediaRecorder.mimeType = 'audio/webm';  
     mediaRecorder.audioChannels = 1;
-
     mediaRecorder.ondataavailable = function(blob) {
-      $('#record-audio').html("<audio id='player1' src=" + URL.createObjectURL(blob) + " style='width: 310px;' type='audio/mp3' controls></audio> ");
-      
-      const player = new MediaElementPlayer('player1', {
+      $('#record-audio').html("<audio id='player1' src=" + URL.createObjectURL(blob) + " style='width: 310px; ' type='audio/mp3' controls></audio> ");
+       const player = new MediaElementPlayer('player1', {
         features: ['playpause', 'progress'],
-      });
-
+    }); 
       $('#delete-audio').on('click', function() {
         $('#record-audio').empty(); 
         document.getElementById("AudioData").value = "";
@@ -2196,20 +2176,20 @@ function onMediaSuccess(stream) {
         menuBar2.style.visibility = 'hidden';
         menuBar1.style.visibility = 'visible';
         document.getElementById('back-menu-bar').style.visibility = 'visible';
-      });
-
+       
+  });
       var reader = new FileReader();
-      reader.onloadend = function() {
-        base64Audio = reader.result.split(";")[1];
-        document.getElementById("AudioData").value = base64Audio;
-      };
-      reader.readAsDataURL(blob);
+          reader.onloadend = function() {
+            var base64Audio = reader.result;
+            document.getElementById("AudioData").value = base64Audio;
+          };
+          reader.readAsDataURL(blob);
     };
-
+ 
     var timeInterval = 360 * 1000;
     mediaRecorder.start(timeInterval);
     $('#stop-recording').disabled = false;
-}
+  }
 
 
 
@@ -2354,19 +2334,17 @@ function playNote(t){
   note.connect(volume);
   volume.connect(audioCtx.destination);
   
-  note.type = 'sine';
-  
-
- /* 
 var now = audioCtx.currentTime;
 var attackTime = .1;
 var releaseTime = 0.01;
 
 volume.gain.setValueAtTime(0, now);
 volume.gain.linearRampToValueAtTime(2, now + attackTime);
-volume.gain.linearRampToValueAtTime(0, now + attackTime + releaseTime);*/
+volume.gain.linearRampToValueAtTime(0, now + attackTime + releaseTime);
 
-note.frequency.setValueAtTime(2100, audioCtx.currentTime);  
+note.frequency.setValueAtTime(800, audioCtx.currentTime);  
+
+
 
 /*  if(firstBeating.checked){
     if(noteFlag == 0){
