--- a/main.html
+++ b/main.html
@@ -539,7 +539,7 @@ body {
     
     <script id="profile.html" type="text/ng-template">
     <ion-view >
-
+  <ion-back-button></ion-back-button>
 	        <ion-nav-bar class="bar-light" >      
 
        
