--- a/main.html
+++ b/main.html
@@ -544,7 +544,7 @@ body {
 
 	     <ion-nav-buttons side="left">
     <button class="button button-clear" ng-click="goBack()">
-      <i class="caret-back"></i> regresar
+      <i class="ri-arrow-left-s-line"></i> regresar
     </button>
   </ion-nav-buttons>  
        
