--- a/lessons.html
+++ b/lessons.html
@@ -4541,7 +4541,7 @@ app.factory('SharedState', function($http, $q) {
                   icon: 'piano',
                   type: 'Ejemplo',
                   media: 'video',
-                  url: 'https://www.youtube.com/embed/1NEYTaHqk_4'
+                  url: 'https://www.youtube.com/embed/E7saCKMdVyY'
                   },{
                   icon: 'description',
                   type: 'Partitura',
