--- a/lessons.html
+++ b/lessons.html
@@ -1205,11 +1205,15 @@ input[type="radio"]:checked + label.green-bg::after {
 
   @media screen and (min-width:1350px){
    #drive{
-     margin-top: 15px;
-    width: 400%;
-     height: 840px;
-    margin-left: -150%;
+     margin-top: -25px;
+    width: 300%;
+     height: 860px;
+    margin-left: -100%;
   }
+    
+     .close-modal {
+       margin-right: -300px;
+     }
 
 }
 
