--- a/lessons.html
+++ b/lessons.html
@@ -1184,7 +1184,7 @@ input[type="radio"]:checked + label.green-bg::after {
 
   .menu-bar {
     position: absolute;
-            display: flex;
+            display: none;
             justify-content: space-around;
             background-color: black;
              padding: 10px 20px;
@@ -1241,6 +1241,10 @@ input[type="radio"]:checked + label.green-bg::after {
     
      .close-modal {
        margin-right: -300px;
+     }
+
+     .menu-bar{
+      display: flex;
      }
 
 }
@@ -2374,7 +2378,7 @@ input[type="radio"]:checked + label.green-bg::after {
         <div class="modal-background">
             <div class="modal-doc">
                         
-     <button class="menu-bar"> Salir </button>           
+     <button class="menu-bar" onclick="closemodal()"> Salir </button>           
      <iframe id="drive" src="" frameborder="0"></iframe>     
                 <a 
           href="#" 
