--- a/agenda.html
+++ b/agenda.html
@@ -1414,7 +1414,7 @@ be a descendant of the grid when it is being dragged.
         <div class="Rtable-cell--content date-content">
          <a href="https://wa.me/{{whats}}" target="_blank"> <i class="ri-whatsapp-fill" style="color: green"></i></a> 
            <div class="text-container" ng-if="isZoom">
-          <span class="webinar-date" >Prof. {{teacher}}</span>{{phone}}</div>
+          <span class="webinar-date" >{{teacher}}</span>{{phone}}</div>
 
 
          <div class="text-container" ng-if="!isZoom">
