--- a/profile.html
+++ b/profile.html
@@ -1288,7 +1288,7 @@ iframe#youtube {
 
   
    @media screen and (min-width:700px){
-   .drive{
+   #drivemodal{
     height: 480px;
     width: 180%;
     margin-left: -40%;
@@ -1341,7 +1341,7 @@ iframe#youtube {
 
 
   @media screen and (min-width:1250px){
-   .drive{
+   #drivemodal{
      margin-top: -35px;
     width: 300%;
      height: 800px;
