--- a/agenda.html
+++ b/agenda.html
@@ -1436,7 +1436,7 @@ be a descendant of the grid when it is being dragged.
       <div class="Rtable-cell access-link-cell" ng-if="isPay">
        <div class="Rtable-cell--content date-content">
          <a href="#" target="_blank"> <i class="ri-bank-card-2-fill" style="color: #4267B2"></i></a> 
-          <a style="font-size: 15px; margin-left: 10px; text-decoration: underline; color: blue; font-weight: 500" href="https://cubiculociencias.github.io/tallerdepiano/payment" target="_blank">
+          <a style="font-size: 15px; margin-left: 10px; text-decoration: underline; color: blue; font-weight: 500" href="https://cubiculociencias.github.io/tallerdepiano/main#/menu/payment" target="_blank">
             Ir a datos de pago
          </a>
         </div>
