--- a/lessons.html
+++ b/lessons.html
@@ -407,7 +407,7 @@ iframe#quiz {
 
 .progressbtn{
   position: absolute;
-            background-color: black;
+            background-color: silver;
   color: white;
             padding: 7px 7px;
             list-style: none;
@@ -1502,8 +1502,8 @@ input[type="radio"]:checked + label.green-bg::after {
       <div class="job-logos"> 
  
          <img src="https://lh3.googleusercontent.com/d/1EP2I0BOMo_8mXsR9qqAv08PxjztZFaQ8" width="80" height="80" style="margin-right: 10px; border-radius: 15px;"/>
-         <button class="progressbtn"  onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/profile';" ng-if="lvl == 0 && status == 'ACTIVO'"> Ver progreso </button>   
- <button class="progressbtn"  onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/payment';" ng-if="lvl == 0 && status != 'ACTIVO'"> Inscribirse </button>  
+        <!-- <button class="progressbtn"  onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/profile';" ng-if="lvl == 0 && status == 'ACTIVO'"> Ver progreso </button>   -->
+ <button class="progressbtn"  onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/payment';" ng-if="status != 'ACTIVO'"> Desbloquear </button>  
       </div>  
       <div class="job-explain-content">
       <div class="job-title-wrapper">
@@ -1657,8 +1657,8 @@ input[type="radio"]:checked + label.green-bg::after {
       <div class="job-logos">
 
          <img src="https://lh3.googleusercontent.com/d/1EP2I0BOMo_8mXsR9qqAv08PxjztZFaQ8" width="80" height="80" style="margin-right: 10px; border-radius: 15px;"/>
-   <button class="progressbtn"  onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/profile';" ng-if="lvl == 1 && status == 'ACTIVO'"> Ver progreso </button> 
- <button class="progressbtn"  onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/payment';" ng-if="lvl == 1 && status != 'ACTIVO'"> Inscribirse </button>  
+   <!-- <button class="progressbtn"  onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/profile';" ng-if="lvl == 1 && status == 'ACTIVO'"> Ver progreso </button> -->
+ <button class="progressbtn"  onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/payment';" ng-if="status != 'ACTIVO'"> Desbloquear </button>   
       </div>  
      
       <div class="job-explain-content"> 
@@ -1793,8 +1793,8 @@ input[type="radio"]:checked + label.green-bg::after {
       <div class="job-logos">
 
          <img src="https://lh3.googleusercontent.com/d/1EP2I0BOMo_8mXsR9qqAv08PxjztZFaQ8" width="80" height="80" style="margin-right: 10px; border-radius: 15px;"/>
-<button class="progressbtn"  onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/profile';" ng-if="lvl == 2 && status == 'ACTIVO'"> Ver progreso </button>   
- <button class="progressbtn"  onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/payment';" ng-if="lvl == 2 && status != 'ACTIVO'"> Inscribirse </button>  
+ <!--<button class="progressbtn"  onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/profile';" ng-if="lvl == 2 && status == 'ACTIVO'"> Ver progreso </button>   -->
+ <button class="progressbtn"  onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/payment';" ng-if="status != 'ACTIVO'"> Desbloquear </button>   
       </div> 
       <div class="job-explain-content">
       <div class="job-title-wrapper">
@@ -1931,8 +1931,8 @@ input[type="radio"]:checked + label.green-bg::after {
       <div class="job-logos">
 
          <img src="https://lh3.googleusercontent.com/d/1EP2I0BOMo_8mXsR9qqAv08PxjztZFaQ8" width="80" height="80" style="margin-right: 10px; border-radius: 15px;"/>
-        <button class="progressbtn"  onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/profile';" ng-if="lvl == 3 && status == 'ACTIVO'"> Ver progreso </button>   
- <button class="progressbtn"  onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/payment';" ng-if="lvl == 3 && status != 'ACTIVO'"> Inscribirse </button>  
+        <!-- <button class="progressbtn"  onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/profile';" ng-if="lvl == 3 && status == 'ACTIVO'"> Ver progreso </button>   -->
+  <button class="progressbtn"  onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/payment';" ng-if="status != 'ACTIVO'"> Desbloquear </button>  
       </div> 
       <div class="job-explain-content">
       <div class="job-title-wrapper">
@@ -2063,8 +2063,8 @@ input[type="radio"]:checked + label.green-bg::after {
       <div class="job-logos">
 
          <img src="https://lh3.googleusercontent.com/d/1EP2I0BOMo_8mXsR9qqAv08PxjztZFaQ8" width="80" height="80" style="margin-right: 10px; border-radius: 15px;"/>
-        <button class="progressbtn"  onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/profile';" ng-if="lvl == 4 && status == 'ACTIVO'"> Ver progreso </button>   
- <button class="progressbtn"  onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/payment';" ng-if="lvl == 4 && status != 'ACTIVO'"> Inscribirse </button> 
+       <!-- <button class="progressbtn"  onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/profile';" ng-if="lvl == 4 && status == 'ACTIVO'"> Ver progreso </button>   -->
+ <button class="progressbtn"  onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/payment';" ng-if="status != 'ACTIVO'"> Desbloquear </button>  
       </div> 
       <div class="job-explain-content">
       <div class="job-title-wrapper">
@@ -2195,8 +2195,8 @@ input[type="radio"]:checked + label.green-bg::after {
       <div class="job-logos">
 
          <img src="https://lh3.googleusercontent.com/d/1EP2I0BOMo_8mXsR9qqAv08PxjztZFaQ8" width="80" height="80" style="margin-right: 10px; border-radius: 15px;"/>
-        <button class="progressbtn"  onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/profile';" ng-if="lvl == 5 && status == 'ACTIVO'"> Ver progreso </button>   
- <button class="progressbtn"  onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/payment';" ng-if="lvl == 5 && status != 'ACTIVO'"> Inscribirse </button> 
+     <!--   <button class="progressbtn"  onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/profile';" ng-if="lvl == 5 && status == 'ACTIVO'"> Ver progreso </button>   -->
+  <button class="progressbtn"  onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/payment';" ng-if="status != 'ACTIVO'"> Desbloquear </button>  
       </div> 
       <div class="job-explain-content">
       <div class="job-title-wrapper">
