--- a/lessons.html
+++ b/lessons.html
@@ -405,18 +405,33 @@ iframe#quiz {
   display: none;
 }
 
-.progressbtn{
+.progressbtn {
   position: absolute;
-            background-color: silver;
+  background-color: #ff8a00; /* Un tono naranja brillante para llamar la atención */
   color: white;
-            padding: 7px 7px;
-            list-style: none;
-             border-radius: 5px;
+  padding: 10px 15px;
+  border-radius: 8px;
   margin-top: 40px;
- right: 25px;
-            font-weight: 550;
-  box-shadow: 0px 8px 20px -8px rgba(26, 33, 43, 0.5), 0px 4px 12px 0px rgba(26, 33, 43, 0.05), 0px 1px 3px 0px rgba(26, 33, 43, 0.25), 0px 1.5px 0.5px 0px #454D57 inset, 0px -3px 1px 0px rgba(0, 0, 0, 0.5) inset;
+  right: 25px;
+  font-weight: 600;
+  font-size: 1.1em;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  box-shadow: 0px 12px 24px -6px rgba(255, 138, 0, 0.4), 
+              0px 6px 10px 0px rgba(255, 138, 0, 0.2), 
+              0px 1px 3px 0px rgba(26, 33, 43, 0.25), 
+              0px 1.5px 0.5px 0px #ffa726 inset, 
+              0px -3px 1px 0px rgba(255, 111, 0, 0.4) inset;
 }
+
+/* Efecto de hover */
+.progressbtn:hover {
+  background-color: #ff6f00;
+  transform: translateY(-3px) scale(1.05);
+  box-shadow: 0px 15px 30px -5px rgba(255, 111, 0, 0.5),
+              0px 8px 15px 0px rgba(255, 111, 0, 0.3);
+}
+
 /* Cambia el diseño a vertical en pantallas amplias (médium y superiores) */
 @media (min-width: 600px) {
 
