--- a/profile.html
+++ b/profile.html
@@ -1785,7 +1785,7 @@ body {
   
         
           
-         <div class="user-stats " ng-if="userData.status == 'INACTIVO'" style="text-align: center;"> 
+         <div class="user-stats " ng-if="userData.status != 'ACTIVO'" style="text-align: center;"> 
             <div  class="alert alert-danger">
           Cuenta inactiva
         </div> <br><br><br>
