--- a/profile.html
+++ b/profile.html
@@ -1787,7 +1787,7 @@ body {
           
          <div class="user-stats " ng-if="userData.status != 'ACTIVO'" style="text-align: center;"> 
             <div  class="alert alert-danger">
-          Cuenta inactiva
+          Pago pendiente
         </div> <br><br><br>
 <button class="btn btn-dark " ng-click="openPaymentInfoModal()"> Reinscribirse</button>
         </div>
