--- a/profile.html
+++ b/profile.html
@@ -1789,7 +1789,7 @@ body {
             <div  class="alert alert-danger">
           Pago pendiente
         </div> <br><br><br>
-<button class="btn btn-dark " ng-click="openPaymentInfoModal()"> Reinscribirse</button>
+<button class="btn btn-dark " ng-click="openPaymentInfoModal()"> Desbloquear</button>
         </div>
          
           
