--- a/lessons.html
+++ b/lessons.html
@@ -1,4 +1,5 @@
 
+
 <head>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script>
@@ -16,7 +17,16 @@
 
 <style>
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
-
+*,
+::after,
+::before {
+  --tw-ring-inset: ;
+  --tw-ring-offset-width: 0px;
+  --tw-ring-offset-color: #fff;
+  --tw-ring-color: rgb(59 130 246 / 0.5);
+  --tw-ring-offset-shadow: 0 0 #0000;
+  --tw-ring-shadow: 0 0 #0000;
+}
 
 body {
 
@@ -405,32 +415,7 @@ iframe#quiz {
   display: none;
 }
 
-.progressbtn {
-  position: absolute;
-  background-color: #ff8a00; /* Un tono naranja brillante para llamar la atención */
-  color: white;
-  padding: 10px 15px;
-  border-radius: 8px;
-  margin-top: 40px;
-  right: 25px;
-  font-weight: 600;
-  font-size: 1.1em;
-  cursor: pointer;
-  transition: all 0.3s ease;
-  box-shadow: 0px 12px 24px -6px rgba(255, 138, 0, 0.4), 
-              0px 6px 10px 0px rgba(255, 138, 0, 0.2), 
-              0px 1px 3px 0px rgba(26, 33, 43, 0.25), 
-              0px 1.5px 0.5px 0px #ffa726 inset, 
-              0px -3px 1px 0px rgba(255, 111, 0, 0.4) inset;
-}
 
-/* Efecto de hover */
-.progressbtn:hover {
-  background-color: #ff6f00;
-  transform: translateY(-3px) scale(1.05);
-  box-shadow: 0px 15px 30px -5px rgba(255, 111, 0, 0.5),
-              0px 8px 15px 0px rgba(255, 111, 0, 0.3);
-}
 
 /* Cambia el diseño a vertical en pantallas amplias (médium y superiores) */
 @media (min-width: 600px) {
@@ -1278,6 +1263,118 @@ input[type="radio"]:checked + label.green-bg::after {
 
    
 
+  
+  .unlockBtn{
+  font-family: "Poppins", sans-serif;
+  text-decoration: none;
+  z-index: 30;
+  box-sizing: border-box;
+  position: absolute;
+    top: 40px;
+    right: 10px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: auto;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.55rem;
+  padding-bottom: 0.55rem;
+  overflow: hidden;
+  font-weight: 700;
+  color: white;
+  background-color: rgb(79 70 229 );
+  border-radius: 0.375rem;
+  --tw-ring-offset-width: 2px;
+  cursor: pointer;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+  transition-duration: 0.3s;
+  --tw-ring-offset-color: #c7d2fe;
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0
+    var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0
+    calc(1px + 2px) rgb(59 130 246 / 0.5);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow),
+    var(--tw-shadow, 0 0 #0000);
+  --tw-ring-offset-color: #c7d2fe;
+}
+
+.unlockBtn:hover{
+  --tw-ring-offset-color: #6366f1;
+}
+
+.unlockBtn:focus{
+  outline: transparent solid 2px;
+  outline-offset: 2px;
+}
+
+
+.btnBorderRight{
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 2rem;
+  height: 5rem;
+  margin-bottom: -2rem;
+  margin-right: -1.25rem;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+  transition-duration: 0.3s;
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+  background-color: rgb(255 255 255);
+  opacity: 0.1;
+  transform: translate(0.25rem, 0) rotate(45deg);
+}
+
+
+.btnBorderLeft{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 5rem;
+  height: 2rem;
+  margin-top: -0.25rem;
+  margin-left: -3rem;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+  transition-duration: 0.3s;
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+  background-color: rgb(255 255 255);
+  opacity: 0.1;
+  transform: translate(-0.25rem, 0) rotate(-45deg);
+}
+
+
+.btniContainer{
+  position: relative;
+  z-index: 20;
+  display: flex;
+  align-items: center;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+
+
+
+.btnIcon {
+  background: none;
+  box-shadow: none;
+   display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 24px;
+  height: 24px;
+
+  color: white;
+  /*border: 1px solid #d8d8d8;*/
+  margin-left: 7px;
+  margin-top: auto;
+}
 </style>
  
 
@@ -1517,8 +1614,15 @@ input[type="radio"]:checked + label.green-bg::after {
       <div class="job-logos"> 
  
          <img src="https://lh3.googleusercontent.com/d/1EP2I0BOMo_8mXsR9qqAv08PxjztZFaQ8" width="80" height="80" style="margin-right: 10px; border-radius: 15px;"/>
-        <!-- <button class="progressbtn"  onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/profile';" ng-if="lvl == 0 && status == 'ACTIVO'"> Ver progreso </button>   -->
- <button class="progressbtn"  onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/payment';" ng-if="status != 'ACTIVO'"> Desbloquear </button>  
+
+         <button class="unlockBtn" onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/payment';" ng-if="status != 'ACTIVO'">
+            <span class="btnBorderRight"></span>
+            <span class="btnBorderLeft"></span>
+            <span class="btniContainer">
+             <i class="btnIcon ri-lock-fill" style="margin-top: -1px; margin-left: -5px;"> </i>
+           Desbloquear
+            </span>
+          </button>
       </div>  
       <div class="job-explain-content">
       <div class="job-title-wrapper">
@@ -1672,8 +1776,15 @@ input[type="radio"]:checked + label.green-bg::after {
       <div class="job-logos">
 
          <img src="https://lh3.googleusercontent.com/d/1EP2I0BOMo_8mXsR9qqAv08PxjztZFaQ8" width="80" height="80" style="margin-right: 10px; border-radius: 15px;"/>
-   <!-- <button class="progressbtn"  onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/profile';" ng-if="lvl == 1 && status == 'ACTIVO'"> Ver progreso </button> -->
- <button class="progressbtn"  onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/payment';" ng-if="status != 'ACTIVO'"> Desbloquear </button>   
+
+<button class="unlockBtn" onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/payment';" ng-if="status != 'ACTIVO'">
+            <span class="btnBorderRight"></span>
+            <span class="btnBorderLeft"></span>
+            <span class="btniContainer">
+             <i class="btnIcon ri-lock-fill" style="margin-top: -1px; margin-left: -5px;"> </i>
+           Desbloquear
+            </span>
+          </button>
       </div>  
      
       <div class="job-explain-content"> 
@@ -1681,7 +1792,7 @@ input[type="radio"]:checked + label.green-bg::after {
        <div class="job-card-title2" >Taller de Piano </div>
        <div class="job-action"> 
     <i class="locklvl ri-award-fill" style="font-size: 25px; margin-right: 5px; color: #9024dc" ng-if="lvl > 1 && status == 'ACTIVO'"> </i>
-      <i class="locklvl ri-lock-fill" style="font-size: 20px; margin-right: 10px;" ng-if="lvl<1 || status != 'ACTIVO'"> </i>   
+      <i class="locklvl ri-lock-fill" style="font-size: 20px; margin-right: 10px;" ng-if="lvl<1  && status == 'ACTIVO'"> </i>   
        </div> 
        </div>
        <div class="job-subtitle-wrapper">
@@ -1808,15 +1919,22 @@ input[type="radio"]:checked + label.green-bg::after {
       <div class="job-logos">
 
          <img src="https://lh3.googleusercontent.com/d/1EP2I0BOMo_8mXsR9qqAv08PxjztZFaQ8" width="80" height="80" style="margin-right: 10px; border-radius: 15px;"/>
- <!--<button class="progressbtn"  onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/profile';" ng-if="lvl == 2 && status == 'ACTIVO'"> Ver progreso </button>   -->
- <button class="progressbtn"  onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/payment';" ng-if="status != 'ACTIVO'"> Desbloquear </button>   
+
+<button class="unlockBtn" onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/payment';" ng-if="status != 'ACTIVO'">
+            <span class="btnBorderRight"></span>
+            <span class="btnBorderLeft"></span>
+            <span class="btniContainer">
+             <i class="btnIcon ri-lock-fill" style="margin-top: -1px; margin-left: -5px;"> </i>
+           Desbloquear
+            </span>
+          </button> 
       </div> 
       <div class="job-explain-content">
       <div class="job-title-wrapper">
        <div class="job-card-title2">Taller de Piano </div>
        <div class="job-action"> 
     <i class="locklvl ri-award-fill" style="font-size: 25px; margin-right: 5px; color: #1894cc" ng-if="lvl > 2 && status == 'ACTIVO'"> </i>
-      <i class="locklvl ri-lock-fill" style="font-size: 20px; margin-right: 10px;" ng-if="lvl < 2 || status != 'ACTIVO'"> </i>
+      <i class="locklvl ri-lock-fill" style="font-size: 20px; margin-right: 10px;" ng-if="lvl < 2  && status == 'ACTIVO'"> </i>
        </div> 
        </div>
        <div class="job-subtitle-wrapper">
@@ -1946,15 +2064,22 @@ input[type="radio"]:checked + label.green-bg::after {
       <div class="job-logos">
 
          <img src="https://lh3.googleusercontent.com/d/1EP2I0BOMo_8mXsR9qqAv08PxjztZFaQ8" width="80" height="80" style="margin-right: 10px; border-radius: 15px;"/>
-        <!-- <button class="progressbtn"  onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/profile';" ng-if="lvl == 3 && status == 'ACTIVO'"> Ver progreso </button>   -->
-  <button class="progressbtn"  onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/payment';" ng-if="status != 'ACTIVO'"> Desbloquear </button>  
+
+<button class="unlockBtn" onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/payment';" ng-if="status != 'ACTIVO'">
+            <span class="btnBorderRight"></span>
+            <span class="btnBorderLeft"></span>
+            <span class="btniContainer">
+             <i class="btnIcon ri-lock-fill" style="margin-top: -1px; margin-left: -5px;"> </i>
+           Desbloquear
+            </span>
+          </button> 
       </div> 
       <div class="job-explain-content">
       <div class="job-title-wrapper">
        <div class="job-card-title2">Taller de Piano</div>
        <div class="job-action"> 
        <i class="locklvl ri-award-fill" style="font-size: 25px; margin-right: 5px; color: #489454" ng-if="lvl > 3 && status == 'ACTIVO'"> </i>
-      <i class="locklvl ri-lock-fill" style="font-size: 20px; margin-right: 10px;" ng-if="lvl < 3 || status != 'ACTIVO'"> </i>
+      <i class="locklvl ri-lock-fill" style="font-size: 20px; margin-right: 10px;" ng-if="lvl < 3  && status == 'ACTIVO'"> </i>
        </div> 
        </div>
        <div class="job-subtitle-wrapper">
@@ -2078,15 +2203,22 @@ input[type="radio"]:checked + label.green-bg::after {
       <div class="job-logos">
 
          <img src="https://lh3.googleusercontent.com/d/1EP2I0BOMo_8mXsR9qqAv08PxjztZFaQ8" width="80" height="80" style="margin-right: 10px; border-radius: 15px;"/>
-       <!-- <button class="progressbtn"  onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/profile';" ng-if="lvl == 4 && status == 'ACTIVO'"> Ver progreso </button>   -->
- <button class="progressbtn"  onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/payment';" ng-if="status != 'ACTIVO'"> Desbloquear </button>  
+    
+<button class="unlockBtn" onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/payment';" ng-if="status != 'ACTIVO'">
+            <span class="btnBorderRight"></span>
+            <span class="btnBorderLeft"></span>
+            <span class="btniContainer">
+             <i class="btnIcon ri-lock-fill" style="margin-top: -1px; margin-left: -5px;"> </i>
+           Desbloquear
+            </span>
+          </button>
       </div> 
       <div class="job-explain-content">
       <div class="job-title-wrapper">
        <div class="job-card-title2">Taller de Piano</div>
        <div class="job-action"> 
       <i class="locklvl ri-award-fill" style="font-size: 25px; margin-right: 5px; color: #f0ac14" ng-if="lvl > 4 && status == 'ACTIVO'"> </i>
-      <i class="locklvl ri-lock-fill" style="font-size: 20px; margin-right: 10px;" ng-if="lvl < 4 || status != 'ACTIVO'"> </i>
+      <i class="locklvl ri-lock-fill" style="font-size: 20px; margin-right: 10px;" ng-if="lvl < 4  && status == 'ACTIVO'"> </i>
        </div> 
        </div>
        <div class="job-subtitle-wrapper">
@@ -2210,15 +2342,22 @@ input[type="radio"]:checked + label.green-bg::after {
       <div class="job-logos">
 
          <img src="https://lh3.googleusercontent.com/d/1EP2I0BOMo_8mXsR9qqAv08PxjztZFaQ8" width="80" height="80" style="margin-right: 10px; border-radius: 15px;"/>
-     <!--   <button class="progressbtn"  onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/profile';" ng-if="lvl == 5 && status == 'ACTIVO'"> Ver progreso </button>   -->
-  <button class="progressbtn"  onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/payment';" ng-if="status != 'ACTIVO'"> Desbloquear </button>  
+
+<button class="unlockBtn" onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/payment';" ng-if="status != 'ACTIVO'">
+            <span class="btnBorderRight"></span>
+            <span class="btnBorderLeft"></span>
+            <span class="btniContainer">
+             <i class="btnIcon ri-lock-fill" style="margin-top: -1px; margin-left: -5px;"> </i>
+           Desbloquear
+            </span>
+          </button>
       </div> 
       <div class="job-explain-content">
       <div class="job-title-wrapper">
        <div class="job-card-title2">Taller de Piano</div>
        <div class="job-action"> 
      <i class="locklvl ri-award-fill" style="font-size: 25px; margin-right: 5px; color: #485cb4" ng-if="lvl > 5 && status == 'ACTIVO'"> </i>
-      <i class="locklvl ri-lock-fill" style="font-size: 20px; margin-right: 10px;" ng-if="lvl < 5 || status != 'ACTIVO'"> </i>
+      <i class="locklvl ri-lock-fill" style="font-size: 20px; margin-right: 10px;" ng-if="lvl < 5 && status == 'ACTIVO'"> </i>
        </div>  
        </div>
        <div class="job-subtitle-wrapper">
