--- a/lessons.html
+++ b/lessons.html
@@ -1270,7 +1270,7 @@ input[type="radio"]:checked + label.green-bg::after {
   z-index: 30;
   box-sizing: border-box;
   position: absolute;
-    top: 40px;
+    top: 50px;
     right: 10px;
   display: inline-flex;
   align-items: center;
@@ -1283,7 +1283,6 @@ input[type="radio"]:checked + label.green-bg::after {
   overflow: hidden;
   font-weight: 700;
   color: white;
-  background-color: rgb(79 70 229 );
   border-radius: 0.375rem;
   --tw-ring-offset-width: 2px;
   cursor: pointer;
@@ -1615,7 +1614,7 @@ input[type="radio"]:checked + label.green-bg::after {
  
          <img src="https://lh3.googleusercontent.com/d/1EP2I0BOMo_8mXsR9qqAv08PxjztZFaQ8" width="80" height="80" style="margin-right: 10px; border-radius: 15px;"/>
 
-         <button class="unlockBtn" onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/payment';" ng-if="status != 'ACTIVO'">
+         <button class="unlockBtn" onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/payment';" ng-if="status != 'ACTIVO'" style="background-color: red">
             <span class="btnBorderRight"></span>
             <span class="btnBorderLeft"></span>
             <span class="btniContainer">
@@ -1629,7 +1628,7 @@ input[type="radio"]:checked + label.green-bg::after {
        <div class="job-card-title2" >Taller de Piano </div>
        <div class="job-action"> 
          <i class="locklvl ri-award-fill" style="font-size: 25px; margin-right: 5px; color: #F44336" ng-if="lvl > 0 && status == 'ACTIVO'"> </i>
-      <i class="locklvl ri-lock-fill" style="font-size: 20px; margin-right: 10px;" ng-if="status != 'ACTIVO'"> </i>
+ 
          
        </div> 
        </div>
@@ -1777,7 +1776,7 @@ input[type="radio"]:checked + label.green-bg::after {
 
          <img src="https://lh3.googleusercontent.com/d/1EP2I0BOMo_8mXsR9qqAv08PxjztZFaQ8" width="80" height="80" style="margin-right: 10px; border-radius: 15px;"/>
 
-<button class="unlockBtn" onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/payment';" ng-if="status != 'ACTIVO'">
+<button class="unlockBtn" onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/payment';" ng-if="status != 'ACTIVO'" style="background-color: #9024dc">
             <span class="btnBorderRight"></span>
             <span class="btnBorderLeft"></span>
             <span class="btniContainer">
@@ -1920,7 +1919,7 @@ input[type="radio"]:checked + label.green-bg::after {
 
          <img src="https://lh3.googleusercontent.com/d/1EP2I0BOMo_8mXsR9qqAv08PxjztZFaQ8" width="80" height="80" style="margin-right: 10px; border-radius: 15px;"/>
 
-<button class="unlockBtn" onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/payment';" ng-if="status != 'ACTIVO'">
+<button class="unlockBtn" onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/payment';" ng-if="status != 'ACTIVO'" style="background-color: #1894cc;">
             <span class="btnBorderRight"></span>
             <span class="btnBorderLeft"></span>
             <span class="btniContainer">
@@ -2065,7 +2064,7 @@ input[type="radio"]:checked + label.green-bg::after {
 
          <img src="https://lh3.googleusercontent.com/d/1EP2I0BOMo_8mXsR9qqAv08PxjztZFaQ8" width="80" height="80" style="margin-right: 10px; border-radius: 15px;"/>
 
-<button class="unlockBtn" onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/payment';" ng-if="status != 'ACTIVO'">
+<button class="unlockBtn" onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/payment';" ng-if="status != 'ACTIVO'" style="background-color: #489454;">
             <span class="btnBorderRight"></span>
             <span class="btnBorderLeft"></span>
             <span class="btniContainer">
@@ -2204,7 +2203,7 @@ input[type="radio"]:checked + label.green-bg::after {
 
          <img src="https://lh3.googleusercontent.com/d/1EP2I0BOMo_8mXsR9qqAv08PxjztZFaQ8" width="80" height="80" style="margin-right: 10px; border-radius: 15px;"/>
     
-<button class="unlockBtn" onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/payment';" ng-if="status != 'ACTIVO'">
+<button class="unlockBtn" onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/payment';" ng-if="status != 'ACTIVO'" style="background-color: #f0ac14;">
             <span class="btnBorderRight"></span>
             <span class="btnBorderLeft"></span>
             <span class="btniContainer">
@@ -2343,7 +2342,7 @@ input[type="radio"]:checked + label.green-bg::after {
 
          <img src="https://lh3.googleusercontent.com/d/1EP2I0BOMo_8mXsR9qqAv08PxjztZFaQ8" width="80" height="80" style="margin-right: 10px; border-radius: 15px;"/>
 
-<button class="unlockBtn" onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/payment';" ng-if="status != 'ACTIVO'">
+<button class="unlockBtn" onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/payment';" ng-if="status != 'ACTIVO'" style="background-color: #485cb4;">
             <span class="btnBorderRight"></span>
             <span class="btnBorderLeft"></span>
             <span class="btniContainer">
