--- a/profile.html
+++ b/profile.html
@@ -2358,7 +2358,7 @@ $scope.manuals = [
     .then(function(response) {
     })  
 
-        $('#record-audio').empty(); 
+     /*   $('#record-audio').empty(); 
         document.getElementById("AudioData").value = "";
       //document.getElementById('recorder').style.display = 'none';
       var menuBar1 = document.getElementById('menu-bar1');
@@ -2366,7 +2366,7 @@ $scope.manuals = [
         menuBar2.style.visibility = 'hidden';
         menuBar1.style.visibility = 'visible';
         document.getElementById('back-menu-bar').style.visibility = 'visible';
-       alert("Actividad enviada a revisión")
+       alert("Actividad enviada a revisión")  */
       
       document.getElementById('menu-bar1').style.visibility = 'visible';
        document.getElementById('menu-bar2').style.visibility = 'hidden';
