--- a/profile.html
+++ b/profile.html
@@ -1932,7 +1932,7 @@ class="js-trigger-video-modal" onclick="toggle_video_modal(this)" style="color: 
           </div>
         </div>
       </div>
-      <div class="col-sm-7" ng-if="userData.status == 'ACTIVO'">
+      <div class="col-sm-7" >
         <div class="dashboard-panel achievement-list-panel">
           <div class="panel-header">
       <h4><i class="fa fa-fw fa-trophy"></i> Ranking</h4>
