--- a/lessons.html
+++ b/lessons.html
@@ -1614,7 +1614,7 @@ input[type="radio"]:checked + label.green-bg::after {
  
          <img src="https://lh3.googleusercontent.com/d/1EP2I0BOMo_8mXsR9qqAv08PxjztZFaQ8" width="80" height="80" style="margin-right: 10px; border-radius: 15px;"/>
 
-         <button class="unlockBtn" onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/payment';" ng-if="status != 'ACTIVO'" style="background-color: red">
+         <button class="unlockBtn" onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/payment';" ng-if="status != 'ACTIVO'" style="background-color: #1894cc">
             <span class="btnBorderRight"></span>
             <span class="btnBorderLeft"></span>
             <span class="btniContainer">
