--- a/lessons.html
+++ b/lessons.html
@@ -4221,60 +4221,50 @@ app.factory('SharedState', function($http, $q) {
               id: 5,
               material:[
               {
-                title: 'Construcción de triadas',
+                title: 'Definición y tipos de triadas',
                 icon: 'library_books',
                 activity:[{
                   icon: 'smart_display',
                   type: 'Lección',
                   media: 'video',
-                  url: 'https://www.youtube.com/embed/'
+                  url: 'https://www.youtube.com/embed/35sho6430Zo'
                   },{
                   icon: 'auto_stories',
                   type: 'Teoría',
                   media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
-                  },{
-                  icon: 'description',
-                  type: 'Ejercicios',
-                  media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
+                  url: 'https://drive.google.com/file/d/1ZsapPWehg_8NLCydckeLOCLDuCrioAFw/preview'
                   }
                 ]
               },
               {
-                title: 'Triadas mayores y menores',
+                title: 'Ejercicios con triadas mayores y menores',
                 icon: 'library_books',
                 activity:[{
-                  icon: 'smart_display',
-                  type: 'Lección',
-                  media: 'video',
-                  url: 'https://www.youtube.com/embed/'
-                  },{
-                  icon: 'auto_stories',
-                  type: 'Teoría',
+                  icon: 'description',
+                  type: 'Ejercicio',
                   media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
+                  url: 'https://drive.google.com/file/d/1afrrOkeHBa_FPYagQsRgcpWEaBkwvVF7/preview'
                   },{
                   icon: 'description',
                   type: 'Ejercicios',
                   media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
+                  url: 'https://drive.google.com/file/d/1TwDvzf9bdN5jEYBWRgA9BbZbjDd7buev/preview'
                   }
                 ]
               },
               {
-                title: 'Pieza: Waltz, Kabalevsky',
+                title: 'Pieza: Galope, Kabalevsky',
                 icon: 'audio_file',
                 activity:[{
                   icon: 'piano',
                   type: 'Ejemplo',
                   media: 'video',
-                  url: 'https://www.youtube.com/embed/'
+                  url: 'https://www.youtube.com/embed/FoSBgcMH6QQ'
                   },{
                   icon: 'description',
                   type: 'Partitura',
                   media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
+                  url: 'https://drive.google.com/file/d/1dosurupTiVPzuNpM29V2tn3HDcSd1BS2/preview'
                   }
                 ]
               }
