--- a/comunity.html
+++ b/comunity.html
@@ -21,8 +21,19 @@
 	/*** base color: #f27275 ***/
 body {
   font-size: 0.9rem;
-  background: silver;
+  background-color: #e5ecef !important;
 }
+
+body::-webkit-scrollbar {
+  width: 8px;
+}
+body::-webkit-scrollbar-track {
+  border-radius: 0;
+}
+body::-webkit-scrollbar-thumb {
+  background-color: rgba(131, 135, 193, 0.4);
+  border-radius: 40px;
+}	
 
 a {color: #f27275;}a:hover, a:focus {color:#666;}
 
@@ -68,6 +79,8 @@ a {color: #f27275;}a:hover, a:focus {color:#666;}
   background: #fff;
   border-radius: 4px;
   margin-bottom: 10px;
+	 border-radius: 8px;
+    box-shadow:  0 4px 8px 0px rgba(0,0,0,0.2);
 }
 
 
@@ -216,42 +229,6 @@ iframe#instagram-embed-0{height: auto;}
 
 .page-wrapper .page-content {
   overflow-x: hidden;
-}
-
-/*------scroll bar---------------------*/
-
-::-webkit-scrollbar {
-  width: 7px;
-  height: 7px;
-}
-::-webkit-scrollbar-button {
-  width: 0px;
-  height: 0px;
-}
-::-webkit-scrollbar-thumb {
-  background: #636269;
-  border: 0px none #ffffff;
-  border-radius: 50px;
-}
-::-webkit-scrollbar-thumb:hover {
-  background: #636269;
-}
-::-webkit-scrollbar-thumb:active {
-  background: #636269;
-}
-::-webkit-scrollbar-track {
-  background: #333238;
-  border: 0px none #ffffff;
-  border-radius: 50px;
-}
-::-webkit-scrollbar-track:hover {
-  background: #333238;
-}
-::-webkit-scrollbar-track:active {
-  background: #333238;
-}
-::-webkit-scrollbar-corner {
-  background: transparent;
 }
 
 
